# DASH-to-HLS

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: auth.rs  dash_to_hls.rs  main.rs
src/config/: channels.rs  deserializer.rs  mod.rs  users.rs
static/: index.html  player.js  style.css
