[package]
name = "DASH-to-HLS"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
anyhow = "1.0"
chrono = "0.4.40"
dash-mpd = "0.14.0"
dotenvy = "0.15.0"
env_logger = "0.10"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
log = "0.4"
mp4decrypt = "0.4.2"
once_cell = "1.21.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.5"
toml = "0.8.20"
url = "2.3"

